--- a/src/Components/LinkButton/LinkButton.css
+++ b/src/Components/LinkButton/LinkButton.css
@@ -14,10 +14,9 @@
 .link-button_white {
     background-color: #fff;
     color: #00bfa5;
-
 }
 
 .link-button:hover {
     transform: translateY(-2px);
-    box-shadow: 0px 2px 3px 1px rgba(0,0,0,0.2);
+    box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.2);
 }
