--- a/src/Components/Footer/NewsletterForm/NewsletterForm.css
+++ b/src/Components/Footer/NewsletterForm/NewsletterForm.css
@@ -28,7 +28,7 @@
     padding-left: 20px;
     padding-right: 20px;
     border: 1px solid #fff;
-    font-family: ralewaybold, Arial, sans-serif;
+    font-family: ralewaymedium, Arial, sans-serif;
     font-size: 14px;
     color: #fff;
     background-color: #00bfa5;
@@ -36,6 +36,7 @@
 }
 
 .newsletter-form__input::placeholder {
+
     color: #fff;
     opacity: 0.6;
 }
