--- a/src/Components/LatestCourses/LatestCourses.css
+++ b/src/Components/LatestCourses/LatestCourses.css
@@ -1,6 +1,6 @@
 .latest-courses {
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     background-color: #fafafa;
 }
 
@@ -22,6 +22,7 @@
 .latest-courses-list {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     margin-top: 50px;
     padding: 0;
     list-style: none;
